# cookiecutter-django

./: cookiecutter.json
tests/: test_cookiecutter_generation.py
{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/config/: urls.py
{{cookiecutter.project_slug}}/config/settings/: base.py
{{cookiecutter.project_slug}}/requirements/: base.txt
