[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "*"
django = "2.2.7"
pytz = "2019.3"
python-slugify ="4.0.0"
Pillow = "6.2.1"
{%- if cookiecutter.use_compressor == "y" %}
rcssmin = 1.0.6
{%- endif %}
argon2-cffi = "19.2.0"
{%- if cookiecutter.use_whitenoise == 'y' %}
whitenoise==4.1.4  
{%- endif %}
redis = "3.3.11"
{%- if cookiecutter.use_celery == "y" %}
celery = "4.3.0"
django-celery-beat = "1.5.0"
{%- if cookiecutter.use_docker == 'y' %}
flower = "0.9.3"
{%- endif %}
{%- endif %}
django-environ = "0.4.5"
django-model-utils = "3.2.0"
django-allauth = "0.40.0"
django-crispy-forms = "1.8.0"
{%- if cookiecutter.use_compressor == "y" %}
django-compressor = "2.3"
{%- endif %}
django-redis = "4.10.0"

{%- if cookiecutter.use_restapi %}
# Django REST Framework
djangorestframework = "3.10.3"
coreapi = "2.3.3"
djoser = "2.0.3"
djangorestframework_simplejwt = "4.3.0"
{%- endif %}

{%- if cookiecutter.use_graphql == "y" %}
graphene-django = "2.6.0"
graphene = "2.1.8"
{%- endif %}

Werkzeug = "0.14.1"
ipdb = "0.12.2"
Sphinx = "2.2.1"
{%- if cookiecutter.use_docker == 'y' %}
psycopg2 = "2.8.3"
{%- else %}
psycopg2-binary = "2.8.4"
{%- endif %}


mypy = "0.740"  
pytest = "5.2.2" 
pytest-sugar = "0.9.2"

flake8 = "3.7.8"
coverage = "4.5.4"
black = "19.10b0"
pylint-django = "2.0.12"
{%- if cookiecutter.use_celery == 'y' %}
pylint-celery = "0.3"
{%- endif %}
pre-commit = "1.20.0"


factory-boy = "2.12.0"

django-debug-toolbar = "2.0"
django-extensions = "2.2.5"
django-coverage-plugin = "1.6.0" 
pytest-django==3.6.0

gunicorn = "19.9.0"
{%- if cookiecutter.use_whitenoise == 'n' %}
Collectfast = "1.3.1"
{%- endif %}
{%- if cookiecutter.use_sentry == "y" %}
sentry-sdk = "0.13.1"
{%- endif %}

{%- if cookiecutter.cloud_provider == 'AWS' %}
django-storages[boto3] = "1.7.2"
{%- elif cookiecutter.cloud_provider == 'GCP' %}
django-storages[google] = "1.7.2"
{%- endif %}
django-anymail[mailgun] = "7.0.0"


[tool.poetry.dev-dependencies]
pytest = "^3.4